--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ Jinja2==3.1.6
 joblib==1.5.1
 json5==0.12.0
 jsonpatch==1.33
+jsonpath-ng==1.7.0
 jsonpointer==3.0.0
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
@@ -88,6 +89,8 @@ langchain-google-genai==2.1.10
 langchain-text-splitters==0.3.11
 langgraph==0.6.6
 langgraph-checkpoint==2.1.1
+langgraph-checkpoint-postgres==2.0.23
+langgraph-checkpoint-redis==0.1.1
 langgraph-prebuilt==0.6.4
 langgraph-sdk==0.2.6
 langsmith==0.4.25
@@ -95,6 +98,7 @@ MarkupSafe==3.0.2
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mistune==3.1.3
+ml_dtypes==0.5.3
 more-itertools==10.8.0
 mpmath==1.3.0
 msgpack==1.1.1
@@ -120,12 +124,17 @@ pillow==11.3.0
 pkginfo==1.12.1.2
 platformdirs==4.3.8
 plotly==6.2.0
+ply==3.11
 poetry-core==2.1.3
 prometheus_client==0.22.1
 prompt_toolkit==3.0.51
 proto-plus==1.26.1
 protobuf==6.32.0
 psutil==7.0.0
+psycopg==3.2.9
+psycopg-binary==3.2.9
+psycopg-pool==3.2.6
+psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==21.0.0
@@ -141,10 +150,13 @@ pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-json-logger==3.3.0
+python-ulid==3.1.0
 pytz==2025.2
 PyYAML==6.0.2
 pyzmq==27.0.0
 RapidFuzz==3.14.0
+redis==6.4.0
+redisvl==0.8.2
 referencing==0.36.2
 requests==2.32.4
 requests-toolbelt==1.0.0
